feat: update docker files

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   app:
@@ -53,4 +53,5 @@ services:
 
 volumes:
   postgres_data:
-    driver: local 
+    driver: local
+
